--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ html
         }
     </style>
 </head>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "dcac2804dbf84925b50c418b2ae14add"}'></script><!-- End Cloudflare Web Analytics -->
 <body>
     <h1>🚀 You.com Multi-Agent Relay Dashboard</h1>
     
